# gurkerlcli

./: .env.example  .gitignore  CART_IMPLEMENTATION.md  DOCKER.md  ENV_AUTH_IMPLEMENTATION.md  LICENSE  README.md  RELEASE_v0.1.1.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  notify-tap.yml  release.yml
src/gurkerlcli/: __init__.py  auth.py  cli.py  client.py  config.py  exceptions.py  models.py
src/gurkerlcli/commands/: auth_cmd.py  cart_cmd.py  lists_cmd.py  orders_cmd.py  search_cmd.py
src/gurkerlcli/utils/: formatting.py
tests/: __init__.py  conftest.py  test_cli.py
