[project]
name = "gurkerlcli"
version = "0.1.0"
description = "CLI for gurkerl.at online grocery shopping (Austria)"
readme = "README.md"
authors = [
    { name = "sheeek", email = "gitlab@ott.team" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "keyring>=25.0.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.8.0",
]

[project.scripts]
gurkerlcli = "gurkerlcli.cli:cli"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
